/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2014 Aaron Cake
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

import "gotcake/protobuf/closure_options.proto";

package gotcake.protobuf;

option java_package = "com.gotcake.protobuf.javascript.protos";
option java_outer_classname = "FooBarProtos";

option (closure_options).namespace = "gotcake";

message FooBar {

    repeated int32 int_32 = 1;
    repeated fixed32 fixed_32 = 2;
    repeated int64 int_64 = 3;
    repeated bool flag = 4;
    repeated string strings = 5;
    repeated bytes rawbytes = 6;
    repeated sfixed32 sfixed_32 = 7;
    repeated uint32 uint_32 = 8;
    repeated fixed64 fixed_64 = 9;
    repeated sfixed64 sfixed_64 = 10;
    repeated uint64 uint_64 = 11;
    repeated sint32 sint_32 = 12;
    repeated sint64 sint_64 = 13;
    repeated float float32 = 14;
    repeated double float64 = 15;

}
