/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2014 Aaron Cake
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

import "gotcake/protobuf/closure_options.proto";

package gotcake.protobuf;

option java_package = "com.gotcake.protobuf.javascript.protos";
option java_outer_classname = "PackedThingyProtos";

option (closure_options).namespace = "gotcake";

message PackedThingy {

    repeated int32 int_32 = 1 [packed = true];
    repeated fixed32 fixed_32 = 2 [packed = true];
    repeated int64 int_64 = 3 [packed = true];
    repeated bool flag = 4 [packed = true];
    repeated sfixed32 sfixed_32 = 7 [packed = true];
    repeated uint32 uint_32 = 8 [packed = true];
    repeated fixed64 fixed_64 = 9 [packed = true];
    repeated sfixed64 sfixed_64 = 10 [packed = true];
    repeated uint64 uint_64 = 11 [packed = true];
    repeated sint32 sint_32 = 12 [packed = true];
    repeated sint64 sint_64 = 13 [packed = true];
    repeated float float32 = 14 [packed = true];
    repeated double float64 = 15 [packed = true];

}